# gcn-classic-to-json

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
gcn_classic_to_json/: json.py  kafka.py  metrics.py  utils.py
gcn_classic_to_json/notices/: __init__.py
gcn_classic_to_json/notices/CALET_GBM_FLT_LC/: __init__.py  example.json
gcn_classic_to_json/notices/GECAM_FLT/: __init__.py  example.json
gcn_classic_to_json/notices/GECAM_GND/: __init__.py  example.json
gcn_classic_to_json/notices/GRB_CNTRPART/: __init__.py  example.json
gcn_classic_to_json/notices/INTEGRAL_OFFLINE/: __init__.py  example.json
gcn_classic_to_json/notices/INTEGRAL_POINTDIR/: __init__.py  example.json
gcn_classic_to_json/notices/INTEGRAL_SPIACS/: __init__.py  example.json
gcn_classic_to_json/notices/INTEGRAL_WAKEUP/: __init__.py
gcn_classic_to_json/notices/INTEGRAL_WEAK/: example.json
gcn_classic_to_json/notices/LVC_INITIAL/: __init__.py  example.json
gcn_classic_to_json/notices/LVC_PRELIMINARY/: __init__.py  example.json
gcn_classic_to_json/notices/LVC_RETRACTION/: __init__.py  example.json
gcn_classic_to_json/notices/LVC_UPDATE/: __init__.py  example.json
gcn_classic_to_json/notices/MAXI_TEST/: __init__.py  example.json
gcn_classic_to_json/notices/MAXI_UNKNOWN/: __init__.py  example.json
gcn_classic_to_json/notices/SK_SN/: __init__.py  example.json
gcn_classic_to_json/notices/SNEWS/: __init__.py  example.json
gcn_classic_to_json/notices/SWIFT_ACTUAL_POINTDIR/: __init__.py  (+1 more)
gcn_classic_to_json/test/: test_notices.py
(+50 files in other folders)
