[tool.poetry]
name = "gcn-classic-to-json"
version = "0.1.0"
description = "Convert GCN Classic notices to JSON"
authors = ["Leo Singer <leo.singer@ligo.org>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
astropy = "*"
click = "^8.2.1"
gcn-kafka = "^0.3.3"
numpy = "*"
prometheus-client = "^0.21.1"
python = "^3.10"
pygcn = "^1.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.poetry.scripts]
gcn-classic-to-json = "gcn_classic_to_json.cli:main"

[tool.poetry.plugins.pytest11]
gcn_classic_to_json = "gcn_classic_to_json.test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
